# TMR-2021-AutoModelCar

./: README.md  average_object (1).py  average_object.py  parking.py  rebase.py
Media/: Pista.drawio
catkin_ws/: .gitignore  documentation.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: autonomos_gazebo_simulation.pc  bring_up.pc  gazebo_plugin.pc  prueba_01.pc
catkin_ws/devel/share/autonomos_gazebo_simulation/cmake/: autonomos_gazebo_simulationConfig.cmake
catkin_ws/devel/share/bring_up/cmake/: bring_upConfig.cmake
catkin_ws/devel/share/gazebo_plugin/cmake/: gazebo_pluginConfig.cmake
catkin_ws/devel/share/prueba_01/cmake/: prueba_01Config.cmake
catkin_ws/src/AVIM_folder/: README.md
catkin_ws/src/AVIM_folder/AVIM/: CMakeLists.txt
catkin_ws/src/AVIM_folder/AVIM/launch/: navigation_with_dynamic_obstacles.launch  navigation_with_static_obstacles.launch  navigation_without_obstacles.launch  parking.launch
catkin_ws/src/AVIM_folder/control/: CMakeLists.txt  package.xml
catkin_ws/src/AVIM_folder/control/src/: Master.cpp  Master_empty.cpp  Master_parking.cpp  Master_static.cpp
catkin_ws/src/AVIM_folder/lane_detection/: CMakeLists.txt  package.xml
catkin_ws/src/AVIM_folder/lane_detection/src/: lane_detection.cpp
catkin_ws/src/AVIM_folder/object_detection/: CMakeLists.txt  package.xml
catkin_ws/src/AVIM_folder/object_detection_parking/: CMakeLists.txt  package.xml
catkin_ws/src/Galacticos_team/: README.md
catkin_ws/src/Gazebo_plugin/: CMakeLists.txt
catkin_ws/src/Gazebo_plugin/include/: autonomos_plugin.h
catkin_ws/src/Gazebo_plugin/src/: autonomos_plugin.cc  parking_lot.cc  parking_lot.hh
catkin_ws/src/LaSalleMX_team/: CMakeLists.txt  README.md  documentation.md  package.xml
catkin_ws/src/LaSalleMX_team/launch/: automodelDebugging2.launch  selfdriving.launch  selfdriving2.launch  selfparking.launch
catkin_ws/src/LaSalleMX_team/src/: clasesReconocimientoEstacionarse.py  clasesReconocimientoTest.py  clasesReconocimientoTest2.py  controlTecladoDeb.py  movimientoCarro.py  movimientoCarro2.py  movimientoCarroEstasionado.py  reconocimientoCarretera.py  reconocimientoCarretera2.py  reconocimientoEstacionada.py
catkin_ws/src/RoboBrains_team/: README.md
catkin_ws/src/TeamCIIAM_team/: README.md
catkin_ws/src/TeamTesla_team/: README.md
catkin_ws/src/TeamTesla_team/codigo/: CMakeLists.txt
catkin_ws/src/TeamTesla_team/codigo/scripts/: obstaculos.py  (+6 more)
catkin_ws/src/autonomos_gazebo_simulation/: CMakeLists.txt
catkin_ws/src/autonomos_gazebo_simulation/launch/: curved_road.launch  empty_autonomous.launch  empty_curved_road.launch  empty_curved_road_v2.launch  empty_straight_road.launch  empty_straight_road_v2.launch  intersection.launch  pista_dos_carriles.launch  pista_tres_carriles.launch  straight_road.launch  straight_road_v2.launch
catkin_ws/src/autonomos_gazebo_simulation/models/AutoNOMOS_mini/: model.sdf
catkin_ws/src/autonomos_gazebo_simulation/models/AutoNOMOS_mini/meshes/: autonomos.dae
catkin_ws/src/autonomos_gazebo_simulation/models/AutoNOMOS_mini_obstacle/: model.config  model.sdf
catkin_ws/src/autonomos_gazebo_simulation/models/AutoNOMOS_mini_obstacle/meshes/: autonomos.dae
catkin_ws/src/autonomos_gazebo_simulation/models/AutoNOMOS_mini_static/: model.config  model.sdf
catkin_ws/src/autonomos_gazebo_simulation/models/pista_tmr_2021/: model.config  model.sdf
catkin_ws/src/autonomos_gazebo_simulation/models/pista_tmr_2021/materials/scripts/: pista_tmr.material
catkin_ws/src/autonomos_gazebo_simulation/models/stop_sign_small/: model.config  model.sdf
catkin_ws/src/autonomos_gazebo_simulation/models/wall/: model.config  model.sdf
catkin_ws/src/autonomos_gazebo_simulation/worlds/: TMR2021.world  TMR2021_parking.world
catkin_ws/src/bring_up/launch/: navigation_with_dynamic_obstacles.launch
catkin_ws/src/bring_up/scripts/: test2_start.py
catkin_ws/src/dotMEX-CAR_team/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dotMEX-CAR_team/scripts/: TMR_01_final.py  TMR_02_final.py  TMR_03_final.py  TMR_04_final.py
catkin_ws/src/galacticos_v1/: CMakeLists.txt  package.xml
catkin_ws/src/galacticos_v1/src/: autodrive.py
catkin_ws/src/prueba_01/: CMakeLists.txt
catkin_ws/src/prueba_01/launch/: prueba_01.launch
catkin_ws/src/prueba_01/scripts/: drive.py  weights_seven_sides.csv
catkin_ws/src/prueba_02/: CMakeLists.txt  package.xml
catkin_ws/src/prueba_02/launch/: prueba_02.launch
catkin_ws/src/prueba_02/scripts/: detector.py  joy_input.py
catkin_ws/src/self_autonomous/: CMakeLists.txt  package.xml
catkin_ws/src/self_autonomous/launch/: El_diablo.launch  obstaculo.launch  parking.launch  parking_mejorado.launch  self_autonomous.launch  taxista.launch
catkin_ws/src/self_autonomous/scripts/: ConAut_V5.py  H_parking.py  H_rebase.py  haza_rebase.py  parking.py  parking2.py  pubAng.py  rebaseLalo.py  velocidad.py
codigo/: CMakeLists.txt
codigo/scripts/: pruebadani.py  pruebadany.py
devel/include/object_detection/: points_objects.h
devel/lib/control/: Master  Master_empty  Master_parking
devel/lib/lane_detection/: lane_detection
devel/lib/object_detection/: object_detection
devel/lib/object_detection_parking/: object_detection_parking
devel/lib/pkgconfig/: autonomos_gazebo_simulation.pc  control.pc  lane_detection.pc  object_detection.pc  object_detection_parking.pc
devel/share/AVIM/cmake/: AVIMConfig.cmake
devel/share/autonomos_gazebo_simulation/cmake/: autonomos_gazebo_simulationConfig.cmake
devel/share/bring_up/cmake/: bring_upConfig.cmake
devel/share/control/cmake/: controlConfig.cmake
devel/share/gazebo_plugin/cmake/: gazebo_pluginConfig.cmake
devel/share/lane_detection/cmake/: lane_detectionConfig.cmake
devel/share/object_detection/cmake/: object_detection-msg-extras.cmake  object_detection-msg-paths.cmake  object_detectionConfig.cmake
devel/share/object_detection_parking/cmake/: object_detection_parkingConfig.cmake
(+12 files in other folders)
